@@ -1,3 +1,12 @@
+2023-03-23 Paulo Andrade <pcpa@gnu.org>
+
+	* include/lightning.h.in: Define new qlshr, qlshi, qlshr_u,
+	qlshi_u, qrshr, qrshi, qrshr_u and qrshi_u instructions.
+	* lib/jit_fallback.c: Implement new fallbacks.
+	* lib/jit_names.c: Update debug information.
+	* lib/lightning.c: Add code to update regsets, matching other
+	instructions with two outputs.
+
 2023-03-20 Paulo Andrade <pcpa@gnu.org>
 
 	* check/all.tst: Add missing instructions to debug encoding.
